[package]
name = "mac_expert_device"
version = "0.1.2"
edition = "2021"
authors = ["chping@iowk.com"]
description = "Get MacOS hardware information through ioreg"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cxping/mac_expert_device.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]